# damia-timesheet-bot

./: .gitignore  README.md  pyproject.toml
damia_timesheet_bot/: cli.py  poll.py  runner.py
damia_timesheet_bot/adapters/: render.py
damia_timesheet_bot/adapters/email/: outlook_com.py
damia_timesheet_bot/adapters/holidays/: uk_govuk.py
damia_timesheet_bot/adapters/leave/: config_ledger.py
damia_timesheet_bot/adapters/notify/: __init__.py
damia_timesheet_bot/adapters/state/: csv_cache.py  submission_store.py
damia_timesheet_bot/adapters/timesheet/: damia_playwright.py
damia_timesheet_bot/core/: bot.py  classify.py  config.py  decide.py  hydrate.py  models.py  paths.py  ports.py  state.py  tracking.py  weekplan.py
damia_timesheet_bot/tui/: app.py
scripts/: damia-tab.ps1  launch-chrome.ps1
spikes/: attachments_probe.py  damia_probe.py  driver_smoke.py  hydrate.py  selector_health.py
tests/: test_bot.py
zellij/: damia-tab.kdl
