[project]
name = "damia-timesheet-bot"
version = "0.0.1"
description = "Assisted weekly timesheet workflow for Damia portal users (draft-only, never auto-submits)"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49",
    "requests>=2.32",
    "textual>=0.83",
    "pywin32>=308 ; sys_platform == 'win32'",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.7",
]

[project.scripts]
damia-bot = "damia_timesheet_bot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["damia_timesheet_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"
